# LogicalCouplingTool

./: .gitattributes  .gitignore  .mutmut-cache  ARCHITECTURE.md  Dockerfile  GitExtractor.py  Jenkinsfile  LogicalCouplingCalculator.py  README.md  docker-compose.yml  first_analysis.py  logical_coupling_1.tar  main.py  mutmut_config.py  nginx.conf  performance.csv  requirements.txt  setup.cfg  setup.py  setup.sh
.data/ProjectToTestLogicalCouplingTool/: analyzed.csv
LogicalCouplingDB/src/: DBManager.py  main.py  util.py
LogicalCouplingNoDb/.data/UnderTestb:main/: LogicalCoupling.csv
LogicalCouplingNoDb/src/: developer_coupling.py  logical_coupling.py  main.py  util.py
LogicalCouplingNoDb/test/: test_calculator.py  test_data.py
LogicalCouplingNoDb/test/logical_coupling/: test.py  test_calculator.py  test_data.py  test_git.py
coupling/: __init__.py  celery_worker.py  developer_coupling.py  logical_coupling.py  main.py  my_celery.py  util.py
dockerimage/: Loader.py  requirements.txt
html/: index.html
html/coupling/: developer_coupling.py.html  logical_coupling.py.html  util.py.html
logical_coupling/: debug.log.2024-01-16  error.log.2024-01-22  log.log.2024-01-16  log.log.2024-01-22
src/: LogicalCouplingCalculator.py
test/: test_db_connection.py
tests/: test.py  test_calculator.py  test_data.py  test_git.py  test_ignore.py
tests/developer_coupling/: test.py
tests/logical_coupling/: debug.log.2024-01-22  error.log.2024-01-16  log.log.2024-01-16  log.log.2024-01-22  log.log.2024-01-29
tests/logical_coupling_test/: test_git.py
(+5 files in other folders)
