[metadata]
name = my_package
version = attr: my_package.VERSION
author = Josiah Carberry
author_email = josiah_carberry@brown.edu
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
[mutmut]
paths_to_mutate=coupling/logical_coupling.py,coupling/util.py,coupling/developer_coupling.py
# comma-separated list of paths to code
runner=python -m unittest discover -s /Users/ncdaam/PycharmProjects/LogicalCouplingTool/tests -t /Users/ncdaam/PycharmProjects/LogicalCouplingTool/tests
# shell command to run tests
tests_dir=tests/


;mutmut run --paths-to-mutate="coupling/logical_coupling.py" --runner="python -m unittest" --tests-dir="tests"

